--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <title>Movies Application</title>
 </head>
 <body>
-
+<header>
+    <h1>Movie Database</h1>
+</header>
+<main>
+    <section>
+        <form name="movie-form">
+            <label for="title">Title</label>
+            <input type="text" id="title">
+            <label for="rating">Rating</label>
+            <input type="text" id="rating">
+        </form>
+        <div id="movie-container"></div>
+    </section>
+</main>
+<footer></footer>
 <script src="js/index.js"></script>
 </body>
 </html>
