add: add movie function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <input type="text" id="title">
             <label for="rating">Rating</label>
             <input type="text" id="rating">
+            <button id="submit-btn" type="button">Submit</button>
         </form>
         <div id="movie-container"></div>
     </section>
