--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <main>
     <section>
         <form name="movie-form">
+            <label for="edit-movie">Personalize</label>
+            <select name="edit-movie" id="edit-movie">
+                <option value="sort">Sort</option>
+                <option value="add">Add</option>
+                <option value="edit">Edit</option>
+            </select>
             <label for="title">Title</label>
             <input type="text" id="title">
             <label for="rating">Rating</label>
