refactored to module-based project

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Movies Application</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <header>
@@ -11,8 +12,8 @@
 <main>
     <section>
         <form name="movie-form">
-            <label for="edit-movie">Personalize</label>
-            <select name="edit-movie" id="edit-movie">
+            <label for="selector-movie">Personalize</label>
+            <select name="selector-movie" id="selector-movie">
                 <option value="sort">Sort</option>
                 <option value="add">Add</option>
                 <option value="edit">Edit</option>
@@ -27,6 +28,6 @@
     </section>
 </main>
 <footer></footer>
-<script src="js/index.js"></script>
+<script type="module" src="js/index.js"></script>
 </body>
 </html>
