edit movies provides movie list

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </header>
 <main>
     <section>
-        <form name="movie-form">
+        <form id="movie-form" name="movie-form">
             <label for="selector-movie">Personalize</label>
             <select name="selector-movie" id="selector-movie">
                 <option value="sort">Sort</option>
