--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
             <label for="title">Title</label>
             <input type="text" id="title">
             <label for="rating">Rating</label>
-            <input type="text" id="rating">
+            <select id="rating">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
             <button id="submit-btn" type="button">Submit</button>
         </form>
         <div id="movie-container"></div>
