initial styling attempt

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Movies Application</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Fanwood+Text|Shrikhand" rel="stylesheet">
+
 </head>
 <body>
 <header>
