--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <option value="4">4</option>
                 <option value="5">5</option>
             </select>
+            <label for="movie-select">Select Movie</label>
+            <select id="movie-select"></select>
             <button id="submit-btn" type="button">Submit</button>
         </form>
         <div id="movie-container"></div>
