--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </section>
 </main>
 <footer></footer>
+<script src="https://kit.fontawesome.com/d9fd52d4f0.js" crossorigin="anonymous"></script>
 <script type="module" src="js/index.js"></script>
 </body>
 </html>
